<package>
  <name>air_ompl_planner</name>
  <version>0.0.1</version>
  <description>OMPL-based Routing Planner for UAVs</description>
  <maintainer email="fanyang2@alumni.cmu.edu">Fan Yang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ompl</build_depend>
  <build_depend>pcl_ros</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ompl</run_depend>
  <run_depend>pcl_ros</run_depend>

</package>
